--- a/templates/build.yml
+++ b/templates/build.yml
@@ -1,10 +1,10 @@
 ### YamlMime:Yaml
-ms.openlocfilehash: 3021ff59990a44d5d0e71b5a887f4570c79b69f4
-ms.sourcegitcommit: 57d343a6c7c2aa43c9f007d7823891d2141eb471
-ms.translationtype: HT
-ms.contentlocale: es-ES
-ms.lasthandoff: 07/01/2021
-ms.locfileid: "113169688"
+#ms.openlocfilehash: 3021ff59990a44d5d0e71b5a887f4570c79b69f4
+#ms.sourcegitcommit: 57d343a6c7c2aa43c9f007d7823891d2141eb471
+#ms.translationtype: HT
+#ms.contentlocale: es-ES
+#ms.lasthandoff: 07/01/2021
+#ms.locfileid: "113169688"
 trigger:
 - '*'
 pool:
