--- a/templates/build.yml
+++ b/templates/build.yml
@@ -1,47 +1,24 @@
 ### YamlMime:Yaml
-ms.openlocfilehash: 3021ff59990a44d5d0e71b5a887f4570c79b69f4
+ms.openlocfilehash: 32819343100f4d8212e660497c1dd9a1e652711a
 ms.sourcegitcommit: 57d343a6c7c2aa43c9f007d7823891d2141eb471
 ms.translationtype: HT
 ms.contentlocale: es-ES
 ms.lasthandoff: 07/01/2021
 ms.locfileid: "113169688"
-trigger:
-- '*'
-pool:
-  vmImage: ubuntu-20.04
-  demands:
-  - npm
-variables:
+parameters:
   buildConfiguration: Release
-  wwwrootDir: Tailspin.SpaceGame.Web/wwwroot
-  dotnetSdkVersion: 5.x
 steps:
-- task: UseDotNet@2
-  displayName: Use .NET SDK $(dotnetSdkVersion)
-  inputs:
-    version: $(dotnetSdkVersion)
-- task: Npm@1
-  displayName: Run npm install
-  inputs:
-    verbose: false
-- script: ./node_modules/.bin/node-sass $(wwwrootDir) --output $(wwwrootDir)
-  displayName: Compile Sass assets
-- task: gulp@1
-  displayName: Run gulp tasks
-- script: echo "$(Build.DefinitionName), $(Build.BuildId), $(Build.BuildNumber)" > buildinfo.txt
-  displayName: Write build info
-  workingDirectory: $(wwwrootDir)
 - task: DotNetCoreCLI@2
-  displayName: Restore project dependencies
+  displayName: Build the project - ${{ parameters.buildConfiguration }}
   inputs:
-    command: restore
+    command: build
+    arguments: --no-restore --configuration ${{ parameters.buildConfiguration }}
     projects: '**/*.csproj'
-- template: templates/build.yml
-  parameters:
-    buildConfiguration: Debug
-- template: templates/build.yml
-  parameters:
-    buildConfiguration: Release
-- task: PublishBuildArtifacts@1
-  displayName: 'Publish Artifact: drop'
-  condition: succeeded()
+- task: DotNetCoreCLI@2
+  displayName: Publish the project - ${{ parameters.buildConfiguration }}
+  inputs:
+    command: publish
+    projects: '**/*.csproj'
+    publishWebProjects: false
+    arguments: --no-build --configuration ${{ parameters.buildConfiguration }} --output $(Build.ArtifactStagingDirectory)/${{ parameters.buildConfiguration }}
+    zipAfterPublish: true
